@@ -1,6 +1,8 @@
 set remoteaddresssize 32
 set remote Z-packet enable
 set remote step-over-range-packet enable
+set remote hardware-breakpoint-limit 3
+set remote hardware-watchpoint-limit 2
 
 define target-ice
   target extended-remote localhost:6423
