@@ -5,10 +5,7 @@ if [ -f /usr/bin/cygpath.exe ]; then
   TMPDIR=`cygpath -w $TMPDIR`
 fi
 if [ "$1" != "" ] ; then
-  avr-objcopy -O binary $1 $TMPDIR/av$$.bin
-  avarice $AVARICE_ARGS -f $TMPDIR/av$$.bin localhost 6423 --detach
-  rm -f $TMPDIR/av$$.bin
-else
-  avarice $AVARICE_ARGS localhost 6423 --detach
+  AVARICE_ARGS="$AVARICE_ARGS -f $1"
 fi
+avarice $AVARICE_ARGS localhost 6423 --detach
 
